# GoodExchange-ISA

./: .gitignore  README.md  docker-compose.yaml  schema.sql  schema_only.sql
GoodExchangeBE_FastAPI/: .env.example  .gitignore  Dockerfile  docker-compose.yaml  pyproject.toml
GoodExchangeBE_FastAPI/src/: __init__.py  config.py  database.py  main.py
GoodExchangeBE_FastAPI/src/dao/: __init__.py  bene_dao.py  categoria_dao.py  feedback_dao.py  messaggio_dao.py  preferiti_dao.py  preferiti_item_dao.py  prestito_dao.py  recensione_dao.py  segnalazione_dao.py  suggerimento_dao.py  utente_dao.py
GoodExchangeBE_FastAPI/src/routers/: __init__.py  bene_router.py  categoria_router.py  feedback_router.py  messaggio_router.py  preferiti_item_router.py  preferiti_router.py  prestito_router.py  recensione_router.py  segnalazione_router.py  suggerimento_router.py  utente_router.py
GoodExchangeBE_FastAPI/src/schemas/: __init__.py  bene.py  categoria.py  feedback.py  messaggio.py  preferiti.py  prestito.py  recensione.py  segnalazione.py  suggerimento.py  utente.py
GoodExchangeBE_FastAPI/src/services/: __init__.py  bene_service.py  feedback_service.py  prestito_service.py  utente_service.py
GoodExchangeBE_FastAPI/tests/: __init__.py  conftest.py
GoodExchangeBE_FastAPI/tests/integration/: __init__.py  test_bene_integration.py  test_categoria_integration.py  test_feedback_integration.py  test_messaggio_integration.py  test_preferiti_integration.py  test_prestito_integration.py  test_recensione_integration.py  test_segnalazione_integration.py  test_suggerimento_integration.py  test_utente_integration.py
GoodExchangeBE_FastAPI/tests/system/: test_system_scenarios.py
GoodExchangeBE_FastAPI/tests/unit/: __init__.py  test_bene_dao.py  test_bene_service.py  (+12 more)
(+104 files in other folders)
